--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="https://i.ibb.co/HKv57tj/lotus-flower-2.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Bellota:wght@300&family=Raleway&display=swap" rel="stylesheet">
     <title>White Lotus</title>
   </head>
   <body>
