--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.ibb.co/HKv57tj/lotus-flower-2.png" />
+    <link rel="icon" href="./images/lotus-flower-3.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bellota:wght@300&family=Raleway&display=swap" rel="stylesheet">
-    <title>White Lotus</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@300&display=swap" rel="stylesheet">
+    <title>The Yogi Handbook</title>
   </head>
   <body>
     <div id="root"></div>
